lab4/lab4.txt
wget http://web.cs.ucla.edu/classes/spring17/
cs35L/assign/coreutils-with-bug.tar.gz
download the required file

tar -xvzf coreutils-with-bug.tar.gz
unzip that file

cd coreutils-with-bug
change direction

./configure --prefix=/u/cs/ugrad/qiusi/lab4/coreutils-with-bug
create the make file

make
make the file
I got the following error
In file included from utimecmp.c:41:0:
utimens.h:2:5: error: conflicting types for 'futimens'
 int futimens (int, char const *, struct timespec const [2]);
     ^~~~~~~~
In file included from utimecmp.h:25:0,
                 from utimecmp.c:25:
/usr/include/sys/stat.h:373:12: note: previous declaration of 'futimens' was here
 extern int futimens (int __fd, const struct timespec __times[2]) __THROW;
            ^~~~~~~~
make[3]: *** [Makefile:659: utimecmp.o] Error 1
make[3]: Leaving directory '/w/home.15/cs/ugrad/qiusi/a4/coreutils-with-bug/lib'
make[2]: *** [Makefile:414: all] Error 2
make[2]: Leaving directory '/w/home.15/cs/ugrad/qiusi/a4/coreutils-with-bug/lib'
make[1]: *** [Makefile:419: all-recursive] Error 1
make[1]: Leaving directory '/w/home.15/cs/ugrad/qiusi/a4/coreutils-with-bug'
make: *** [Makefile:357: all] Error 2

cd~
go back to the main directory

wget http://web.cs.ucla.edu/classes/spring17/cs35L/assign/coreutils.diff
to get the patch file

patch -p0 < coreutils.diff
to patch the file i got

patching file lib/utimens.c
patching file lib/utimens.h
patching file src/copy.c
patching file src/tee.c
patching file src/touch.c

make

make install

use the code to produce the result
$ tmp=$(mktemp -d)
$ cd $tmp
$ touch -d '1918-11-11 11:00 GMT' wwi-armistice
$ touch now
$ sleep 1
$ touch now1
$ TZ=UTC0 ls -lt --full-time wwi-armistice now now1

the result is
-rw-r--r-- 1 qiusi csugrad 0 2017-04-27 04:47:24.890600391 +0000 now1
-rw-r--r-- 1 qiusi csugrad 0 2017-04-27 04:47:07.782139455 +0000 now
-rw-r--r-- 1 qiusi csugrad 0 1918-11-11 11:00:00.000000000 +0000 wwi-armistice

$ cd
$ rm -fr $tmp

cd src
change to that directory

emacs ls.c
To look through the file

C-s to time
To search for the function that used for time comparsion
I found that it is the problem with compare_mtime

gdb ~/lab4/coreutils-with-bug/src/ls
use the gdb to debug

(gdb) break compare_mtime
(gdb) list
(gdb) info functions
to find all the defined function

I got 
timespec_cmp (struct timespec a, struct timespec b)
{
    int diff = a.tv_sec - b.tv_sec;
    return diff ? diff : a.tv_nsec - b.tv_nsec;
}

I fixed that prolems and use

diff -u timespec.h timespec_1.h > lab4.diff
To get all the chage respect to the original

I saved all the changes and make that file again

use the code to produce the result again
$ tmp=$(mktemp -d)
$ cd $tmp
$ touch -d '1918-11-11 11:00 GMT' wwi-armistice
$ touch now
$ sleep 1
$ touch now1
$ TZ=UTC0 ls -lt --full-time wwi-armistice now now1

-rw-r--r-- 1 qiusi csugrad 0 2017-04-28 05:41:51.484090235 +0000 now1
-rw-r--r-- 1 qiusi csugrad 0 2017-04-28 05:41:36.642692181 +0000 now
-rw-r--r-- 1 qiusi csugrad 0 1918-11-11 11:00:00.000000000 +0000 wwi-armistice

The display function is still wrong. Since the server is using unsigned 32-bit
tie while the file is using signed 32-bit time.


